--- a/ZadDom/ZadDom5/make.visual/make.visual.2017.vcxproj.filters
+++ b/ZadDom/ZadDom5/make.visual/make.visual.2017.vcxproj.filters
@@ -20,12 +20,12 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="Res.rc">
+    <ResourceCompile Include="..\source\Res.rc">
       <Filter>Pliki zasobów</Filter>
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Res.h">
+    <ClInclude Include="..\source\Res.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
   </ItemGroup>
