--- a/ZadDom/ZadDom5/make.visual/make.visual.2017.vcxproj
+++ b/ZadDom/ZadDom5/make.visual/make.visual.2017.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{691419E0-F580-46CF-8C33-FE2344AA0A44}</ProjectGuid>
     <RootNamespace>makevisual2017</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
-    <ProjectName>Lab2</ProjectName>
+    <ProjectName>ZadDom5</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
