Wyświetlanie małego okiena w lewym górnym narożniku
Brak powiekszania

--- a/ZadDom/ZadDom3/make.visual/make.visual.2017.vcxproj
+++ b/ZadDom/ZadDom3/make.visual/make.visual.2017.vcxproj
@@ -131,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\source\bitmap1.bmp" />
+    <Image Include="..\source\bitmap2.bmp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
