--- a/Zajęcia/Lab 08/make.visual/make.visual.2017.vcxproj
+++ b/Zajęcia/Lab 08/make.visual/make.visual.2017.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{691419E0-F580-46CF-8C33-FE2344AA0A44}</ProjectGuid>
     <RootNamespace>makevisual2017</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
-    <ProjectName>Projekt</ProjectName>
+    <ProjectName>Lab 08</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -121,13 +121,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\source\create_postman.cpp" />
     <ClCompile Include="..\source\main.cpp" />
-    <ClCompile Include="..\source\postman_movment.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\source\create_postman.h" />
-    <ClInclude Include="..\source\postman_movment.h" />
     <ClInclude Include="..\source\Res.h" />
   </ItemGroup>
   <ItemGroup>
